# quantum_state_neural_network

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in
src/features/: site_labels.cpp  site_labels.hpp
src/features/.deps/: site_labels.Po
src/hamiltonians/: fit_hamiltonian_terms.cpp  hamiltonian_read_in.cpp  hamiltonian_read_in.hpp
src/hamiltonians/.deps/: fit_hamiltonian_terms.Po  hamiltonian_read_in.Po  site_labels.Po
src/neural_network/: loss_function.cpp  loss_function.hpp  loss_function_data.cpp  loss_function_data.hpp  network_functions.cpp  network_functions.hpp  optimization_log.cpp  optimization_log.hpp  single_layer_perceptron.cpp  single_layer_perceptron.hpp  train.hpp
src/neural_network/.deps/: loss_function.Po  loss_function_data.Po  loss_log.Po  network_functions.Po  optimization_log.Po  single_layer_perceptron.Po
src/program_options/: general_options.hpp
src/test/: bfgs_test.cpp  check_bfgs.ipynb  checksingle_layer_perceptron.ipynb  line_search_test.cpp  linear_algebra_test.cpp  single_layer_perceptron_test.cpp  site_labels_test.cpp  slp_check.ipynb
src/test/.deps/: bfgs_test.Po  line_search_test.Po  linear_algebra_test.Po  single_layer_perceptron_test.Po  site_labels_test.Po
src/test/.ipynb_checkpoints/: check_bfgs-checkpoint.ipynb  checksingle_layer_perceptron-checkpoint.ipynb
src/utilities/algorithms/: quick_sort.hpp
src/utilities/data_structures/: fixed_size_queue.hpp
src/utilities/general/: cout_tools.hpp  dcmplx_type_def.hpp  debug.hpp  dvec_def.hpp  load_bar.hpp  run_script.hpp  template_tools.hpp
src/utilities/linear_algebra/: blas.hpp  dense_matrix.cpp  dense_matrix.hpp  dense_vector.cpp  dense_vector.hpp
src/utilities/linear_algebra/.deps/: dense_matrix.Po  dense_vector.Po
src/utilities/optimization/: base_optimizer.hpp  bfgs.cpp  bfgs.hpp  lbfgs.cpp  lbfgs.hpp  line_search.cpp  line_search.hpp
src/utilities/optimization/.deps/: bfgs.Po  lbfgs.Po  line_search.Po
src/utilities/wrappers/: io_wrapper.hpp  mpi_wrapper.cpp  mpi_wrapper.hpp  program_options_wrapper.hpp
src/utilities/wrappers/.deps/: mpi_wrapper.Po
